updated open api docs
